[package]
name = "openformula"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.2"
nom_locate = "3.0.1"
time = "0.1"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "alloc"]