[package]
name = "openformula"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.spreadsheet-ods-cellref]
version = "0.1.0"
path = "../spreadsheet-ods-cellref"

[dependencies]
time = "0.1"

[dependencies.nom]
version = "7.1.1"
features = [ "alloc" ]

[dependencies.nom_locate]
version = "4.0.0"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "alloc"]