[package]
name = "openformula"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-ident = "1.0.5"

[dependencies.nom]
version = "7.1.1"
features = [ "alloc" ]

[dependencies.nom_locate]
version = "4.0.0"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "alloc"]

[dependencies.iparse]
path = "../iparse"
